Added unique and constraints to the table. Added message in delete OK. Modified DTOs for creation and update. Test updates